--- a/NateSwartz.Blazor.SwApi/wwwroot/index.html
+++ b/NateSwartz.Blazor.SwApi/wwwroot/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width">
     <title>NateSwartz.Blazor.SwApi</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -10,7 +11,7 @@
 <body>
     <app>Loading...</app>
 
-    <script src="css/bootstrap/bootstrap-native.min.js"></script>
-    <script type="blazor-boot"></script>
+    <script type="blazor-boot">
+    </script>
 </body>
 </html>
