--- a/NateSwartz.Blazor.SwApi/wwwroot/index.html
+++ b/NateSwartz.Blazor.SwApi/wwwroot/index.html
@@ -6,12 +6,20 @@
     <title>NateSwartz.Blazor.SwApi</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
     <app>Loading...</app>
 
     <script type="blazor-boot">
+    </script>
+    <script type="text/javascript">
+        Blazor.registerFunction('Show Modal', function () {
+            $('.ui.modal').modal('show');
+        });
     </script>
 </body>
 </html>
